syntax = "proto3";

// Use convenience types defined and published as a package by Google
// import "google/protobuf/empty.proto";

// Specify the directory where the code is automatically generated
// option go_package = "./";
option go_package = "../server-go/pb";

// Specify package name to avoid name collision
package point_history;

// Method definition
service PointHistoryService {
  // general
  // create 
  rpc Create (PointHistory) returns (PointHistory) {}

  // update 
  rpc Update (PointHistory) returns (PointHistoryBoolResponse) {}

  // delete
  rpc Delete (PointHistoryIdRequest) returns (PointHistoryBoolResponse) {}

  // get by id
  rpc GetById (PointHistoryIdRequest) returns (PointHistory) {}

  // get by uuid
  rpc GetByUuid (PointHistoryUuidRequest) returns (PointHistory) {}

  // get by order id
  rpc GetByOrderId (PointHistoryIdRequest) returns (PointHistory) {}

  // get onsale list by user
  rpc GetSoldListByUser (PointHistoryUserIdRequest) returns (PointHistoryList) {}

  // get purchaed list by user
  rpc GetPurchasedListByUser (PointHistoryUserIdRequest) returns (PointHistoryList) {}

  // get list by id list
  rpc GetListByIdList (PointHistoryIdListRequest) returns (PointHistoryList) {}

  // get all
  // rpc GetAll (google.protobuf.Empty) returns (PointHistoryList) {}
}

// ユーザー情報を表すメッセージ型
message PointHistory {
  int64 id = 1;
  string uuid = 2;
  int64 order_id = 3;
  int64 user_id = 4;
  Progress progress = 5;
  enum Progress {
    Requested = 0;
    Paid = 1;
    Pended = 2;
    Canceled = 3;
    Refunded = 4;
    };
  Service service = 6;
  enum Service {
    Point = 0;
    Cash = 1;
    Credit = 2;
    };
  int64 used_point = 7;
  string created_at = 10;
  string updated_at = 11;
  bool is_deleted = 12; 

  // not in db
  int64 price = 14;
  int64 asp_rate = 8;
  bool via_asp = 9; // true: asp, false: direct
}

message PointHistoryList {
  repeated PointHistory point_history = 1;
}

// request
message PointHistoryIdRequest {
  int64 id = 1;
}

message PointHistoryUuidRequest {
  string uuid = 1;
}

message PointHistoryIdListRequest {
  repeated int64 id = 1;
}

message PointHistoryUserIdRequest {
  int64 user_id = 1;
}

// response
message PointHistoryBoolResponse {
  bool error = 1;
}